# 2026-comparch-lab3

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
apps/: CMakeLists.txt  app.cpp
cmake/: CompilerWarnings.cmake
docs/: .~lock.lab_3_kv33_Kozlov.odt#  .~lock.lab_4_kv33_Kozlov.odt#  lab4_task.md  lab_2_kvXX_Surname.odt  lab_3_kv33_Kozlov.odt  lab_4_kv33_Kozlov.odt  task.md  variant.md
examples/: basic.hex  complete.hex  example-pages-0.csv  example-pages-1.csv  example-pages-2.csv  example-pages-3.csv  example-program.hex  example-segments.csv  literals.hex  memory.hex  sample.hex  test-case.hex
scripts/: requirements.txt  sources-to-pdf.py  sources.html  tests-to-pdf.py  tests.html
src/: CMakeLists.txt
src/Args/: Args.cpp  Args.hpp  Args.test.cpp
src/Decompiler/: Decompiler.cpp  Decompiler.hpp  Decompiler.test.cpp
src/Hex/: Hex.cpp  Hex.hpp  Hex.test.cpp
src/Instruction/: Instruction.cpp  Instruction.hpp  Instruction.test.cpp
src/InstructionPrototype/: InstructionPrototype.cpp  InstructionPrototype.hpp  InstructionPrototype.test.cpp
src/Operand/: Operand.cpp  Operand.hpp  Operand.test.cpp
src/assembly/Decompiler/: Decompiler.cpp  Decompiler.hpp  Decompiler.test.cpp
src/assembly/Instruction/: Instruction.cpp  Instruction.hpp  Instruction.test.cpp
src/assembly/InstructionFormat/: InstructionFormat.cpp  InstructionFormat.hpp
src/assembly/InstructionPrototype/: InstructionPrototype.cpp  InstructionPrototype.hpp  InstructionPrototype.test.cpp
src/assembly/Operand/: Operand.cpp  Operand.hpp
src/util/Args/: Args.cpp  Args.hpp  Args.test.cpp
src/util/Csv/: Csv.cpp  Csv.hpp
src/util/Hex/: Hex.cpp  Hex.hpp  Hex.test.cpp
src/util/String/: String.cpp  String.hpp  String.test.cpp
src/vram/PagesTable/: PagesTable.cpp  PagesTable.hpp  PagesTable.test.cpp
src/vram/SegmentsTable/: SegmentsTable.cpp  SegmentsTable.hpp  SegmentsTable.test.cpp
src/vram/Vram/: Vram.cpp  Vram.hpp  Vram.test.cpp
src/vram/VramImage/: VramImage.cpp  VramImage.hpp
tests/integration/: CMakeLists.txt  Integration.test.cpp  Variant6.test.cpp
