file(GLOB_RECURSE ALL_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE LIB_HEADERS CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
file(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/*.test.cpp")

set(LIB_SOURCES ${ALL_SOURCES})
if(TEST_SOURCES)
    list(REMOVE_ITEM LIB_SOURCES ${TEST_SOURCES})
endif()

set(INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}")
foreach(HEADER ${LIB_HEADERS})
    get_filename_component(DIR ${HEADER} DIRECTORY)
    list(APPEND INCLUDE_DIRS ${DIR})
endforeach()
list(REMOVE_DUPLICATES INCLUDE_DIRS)

if(LIB_SOURCES)
    add_library(decompiler_lib STATIC ${LIB_SOURCES})
    target_include_directories(decompiler_lib PUBLIC ${INCLUDE_DIRS})
    set_project_warnings(decompiler_lib)
else()
    add_library(decompiler_lib INTERFACE)
    target_include_directories(decompiler_lib INTERFACE ${INCLUDE_DIRS})
endif()

# --- Co-located unit tests (*.test.cpp next to source) ---
include(GoogleTest)

foreach(TEST_SOURCE ${TEST_SOURCES})
    get_filename_component(TEST_NAME ${TEST_SOURCE} NAME_WE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME} PRIVATE GTest::gtest_main decompiler_lib)
    set_project_warnings(${TEST_NAME})
    gtest_discover_tests(${TEST_NAME})
endforeach()
